public abstract class Colleague {
    public abstract void onEvent(Mediator mediator);
}
