public abstract class Mediator
{
    public abstract void doEvent(String eventType);
}
